--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "https-proxy-agent": "^7.0.5",
     "luxon": "^3.5.0",
     "readline": "^1.3.0"
+  },
+  "scripts": {
+    "start": "node cats.js",
+    "proxy": "node cats-proxy.js"
   }
 }
